fixed blue button color on iphone

--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-@supports (-webkit-touch-callout: none) {
-  button {
-    -webkit-tap-highlight-color: transparent;
-    -webkit-appearance: none;
-    appearance: none;
-  }
+button,
+input[type="button"],
+input[type="submit"] {
+  -webkit-appearance: none;
+  appearance: none;
 }
